<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.Data_Input_1"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    >

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lst_data">

    </ListView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aleppo"
        android:id="@+id/btnAleppo"
        android:textSize="@dimen/size_large"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/damascus"
        android:id="@+id/btnDamascus"
        android:textSize="@dimen/size_large"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/suwayda"
        android:id="@+id/btnSuwayda"
        android:textSize="@dimen/size_large"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hama"
        android:id="@+id/btnHama"
        android:textSize="@dimen/size_large"
        />
    <com.google.android.material.button.MaterialButton
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/latakia"
    android:id="@+id/btnLatakia"
    android:textSize="@dimen/size_large"
    />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tartous"
        android:id="@+id/btnTartous"
        android:textSize="@dimen/size_large"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/deer_alzour"
        android:id="@+id/btnDeerAlzor"
        android:textSize="@dimen/size_large"
        />
    <com.google.android.material.button.MaterialButton
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/hasakah"
    android:id="@+id/btnHasakah"
    android:textSize="@dimen/size_large"
    />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>